--- a/src/app/emistakes/HTTP/error501/error501.component.html
+++ b/src/app/emistakes/HTTP/error501/error501.component.html
@@ -1,1 +1,5 @@
-<p>error501 works!</p>
+<div class="container">
+    <div id="gatito">
+<img class="HTTP" src="https://http.cat/501">
+</div>
+</div>
