--- a/src/app/view/projects/projects.component.html
+++ b/src/app/view/projects/projects.component.html
@@ -1,1 +1,23 @@
-<p>projects works!</p>
+<div class="container">
+ 
+
+  <div id="terjeta">
+  <nav class="navbar bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand">Projectos Cygnus</a>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Buscar " name="filterPost" aria-label="Search" [(ngModel)]="filterPost" >
+          <button class="btn btn-outline-success" type="submit">Buscar </button>
+        </form>
+      </div>
+    </nav>
+    <div class="card border-info mb-3" style="max-width: 18rem;" *ngFor="let Proyectos of Proyecto | filter:filterPost">
+      <div class="card-header">{{Proyectos.nombre}}</div>
+      <div class="card-body">
+        <h5 class="card-title">{{Proyectos.Descripcion}}</h5>
+        <a id="boton" href="{{Proyectos.Url}}" class="btn btn-primary">Ver proyecto</a>
+      </div>
+    </div>
+  
+  </div>
+  </div>  
