--- a/src/app/view/servicio-tecnico/servicio-tecnico.component.html
+++ b/src/app/view/servicio-tecnico/servicio-tecnico.component.html
@@ -1,1 +1,14 @@
-<p>servicio-tecnico works!</p>
+<div class="container">
+    <div id="tarjeta" class="card">
+        <div class="card-header">
+            <i class="bi bi-person-circle"></i> Contáctanos
+        </div>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <p><i class="bi bi-envelope-at">    Correo de contacto: becariosfi@admon.uniajc.edu.co <br>
+            <h5>Nota: recuerda informar la anomalia que estas presentado con el servidor y espera que el equipo de soporte se ponga en contacto.</h5></i></p>
+            <footer class="blockquote-footer">Equipo de servicio técnico<cite title="Source Title"></cite></footer>
+          </blockquote>
+        </div>
+      </div>
+</div>
