--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-menu></app-menu>
 
-<app-home></app-home>
-    
+
+<router-outlet></router-outlet>
 <footer>
   <app-footer></app-footer>
 </footer>
