--- a/src/app/emistakes/HTTP/error404/error404.component.html
+++ b/src/app/emistakes/HTTP/error404/error404.component.html
@@ -1,1 +1,5 @@
-<p>error404 works!</p>
+<div class="container">
+    <div id="gatito">
+        <img class="HTTP" src="https://http.cat/404">
+    </div>
+</div>
