--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -1,1 +1,25 @@
-<p>home works!</p>
+<img  id="banner" src="../../../assets/resource/Logo.jpeg" alt="" >
+
+
+<div class="container">
+
+  
+    <div id="tarjeta" class="alert alert-danger" role="alert">
+      <h4 class="alert-heading">Servidor en pruebas!</h4>
+      <p>Hola, Este es un recordatorio de que este servidor <i class="bi bi-database"></i> aún se encuentra en pruebas y en constantes cambios para porder así garantizar  un servico óptimo y funcional <i class="bi bi-check-circle"></i> </p>
+      <hr>
+      <p class="mb-0">De antemano pedimos disculpas por cualquier inconveniente  Atte <b>Servicio Técnico</b>.</p>
+    </div>
+ 
+
+
+    <div class="alert alert-warning" role="alert">
+      Hola, Bienvenido.<br>
+      Recuerda que si presentas algún error con el servidor, no olvides reportarlo con el servicio técnico para así
+      poder garantizar un servicio de calidad
+      <br>
+      Atte
+      Servicio Técnico<br>
+      <i class="bi bi-exclamation-diamond"> Mensaje de Servicio Técnico</i><br>
+    </div>
+  </div>
