--- a/src/app/view/footer/footer.component.html
+++ b/src/app/view/footer/footer.component.html
@@ -55,7 +55,7 @@
               Products
             </h6>
             <p>
-              <a href="View/proyectos.html" class="text-reset">Proyectos</a>
+              <a href="Proyectos" class="text-reset">Proyectos</a>
             </p>  
             <p>
               <a href="https://www.uniajc.edu.co/" class="text-reset">UNIAJC</a>
