--- a/src/app/view/home/home.component.css
+++ b/src/app/view/home/home.component.css
@@ -7,3 +7,13 @@
     #tarjeta{
         margin-top: 20px;
     }
+    #novedades{
+        width: 20%;
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 12px;
+    }
+  
+    #letras{
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  
+        font-size: 12px;    
+    }
