--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -6,20 +6,24 @@
   
     <div id="tarjeta" class="alert alert-danger" role="alert">
       <h4 class="alert-heading">Servidor en pruebas!</h4>
-      <p>Hola, Este es un recordatorio de que este servidor <i class="bi bi-database"></i> aún se encuentra en pruebas y en constantes cambios para porder así garantizar  un servico óptimo y funcional <i class="bi bi-check-circle"></i> </p>
+      <p>Hola, Este es un recordatorio de que este servidor  aún se encuentra en pruebas y en constantes cambios para porder así garantizar  un servico óptimo y funcional.
+        No olvides reportar cualquier daño o inconveniente que presentan. <i class="bi bi-check-circle"></i> </p>
       <hr>
       <p class="mb-0">De antemano pedimos disculpas por cualquier inconveniente  Atte <b>Servicio Técnico</b>.</p>
     </div>
- 
 
-
-    <div class="alert alert-warning" role="alert">
-      Hola, Bienvenido.<br>
-      Recuerda que si presentas algún error con el servidor, no olvides reportarlo con el servicio técnico para así
-      poder garantizar un servicio de calidad
-      <br>
-      Atte
-      Servicio Técnico<br>
-      <i class="bi bi-exclamation-diamond"> Mensaje de Servicio Técnico</i><br>
+    <div id="novedades" class="card">
+      <div id="letras" class="card-header">
+        Novedades
+      </div>
+      <div class="card-body">
+        <blockquote class="blockquote mb-0">
+          <p id="letras">Actulizacion Cygnus v 0.0.1..</p>
+          <p id="letras">*Nuevo Duseño*</p>
+          <p id="letras">*Buscador de proyectos*</p>
+          <footer class="blockquote-footer">Servicio Técnico</footer>
+        </blockquote>
+      </div>
     </div>
+    
   </div>
