--- a/src/app/view/footer/footer.component.html
+++ b/src/app/view/footer/footer.component.html
@@ -52,10 +52,10 @@
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Products
+              Servicios
             </h6>
             <p>
-              <a href="View/proyectos.html" class="text-reset">Proyectos</a>
+              <a href="Proyectos" class="text-reset">Proyectos</a>
             </p>  
             <p>
               <a href="https://www.uniajc.edu.co/" class="text-reset">UNIAJC</a>
@@ -63,7 +63,7 @@
          
           </div>
           <!-- Grid column -->
-  
+          
           <!-- Grid column -->
       
           <!-- Grid column -->
@@ -78,7 +78,7 @@
             <p>
               <i class="fas fa-envelope me-3"></i>
               becariosfi@admon.uniajc.edu.co
-            </p>
+            </p>  
       
           </div>
           <!-- Grid column -->
