--- a/src/app/view/projects/projects.component.html
+++ b/src/app/view/projects/projects.component.html
@@ -1,5 +1,13 @@
 <div class="container">
- 
+  <div class="container">
+    <div class="alert alert-warning" role="alert">
+    Proyectos -Facultad de Ingenierias
+  </div>
+  <div class="alert alert-warning" role="alert">
+
+    Si deseas tener tu propio proyecto, Puedes contactar con el servicio técnico y se te Dara las instrucciones para abrir tu proyecto. <a href="contactos.html">Aqui</a>
+
+  </div>
 
   <div id="terjeta">
   <nav class="navbar bg-body-tertiary">
