--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -3,7 +3,7 @@
 
 <div class="container">
 
-  
+
     <div id="tarjeta" class="alert alert-danger" role="alert">
       <h4 class="alert-heading">Servidor en pruebas!</h4>
       <p>Hola, Este es un recordatorio de que este servidor  aún se encuentra en pruebas y en constantes cambios para porder así garantizar  un servico óptimo y funcional.
@@ -18,12 +18,11 @@
       </div>
       <div class="card-body">
         <blockquote class="blockquote mb-0">
-          <p id="letras">Actulizacion Cygnus v 0.0.1..</p>
-          <p id="letras">*Nuevo Duseño*</p>
-          <p id="letras">*Buscador de proyectos*</p>
+          <p id="letras">Actulizacion Cygnus v 0.0.2..</p>
+          <p id="letras">*Nuevos proyecots*</p>
           <footer class="blockquote-footer">Servicio Técnico</footer>
         </blockquote>
       </div>
     </div>
-    
+
   </div>
